# Analyzing-Pokemons

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt  template.py
01_WEBSCRAPING/: pokedex_scraper.py  pokemons_data.csv
02_ETL/: pokemons_data_etl.py
03_DATA/: pokedex_data.csv
conf/: configs.yaml
data/: pokemon_stats.db
data/database/: pokemon_stats.db
data/processed/: pokemons.csv
notebooks/: 01_data_ingestion.ipynb  01_data_scraping_experiments.ipynb  02_data_exploration.ipynb  02_data_transformation.ipynb  03_data_analysis.ipynb
reports/: Pokémons Stats Analysis.md
src/: constants.py  exception.py  logger.py
src/components/: data_processor.py  data_scraper.py
src/pipelines/: stage_01_data_extraction.py  stage_01_data_scraping.py  stage_02_data_processing.py
src/utils/: analysis_utils.py  basic_utils.py
